--- a/src/app/Property/propert-card/propert-card.component.html
+++ b/src/app/Property/propert-card/propert-card.component.html
@@ -1,12 +1,18 @@
-<div class="row">
-    <div class="shadow-lg col-sm-4 p-3">
-        <div class="card">
-            <img class="propImg" src="assets/Images/House-default.jpg">
-            <div class="card-body p-2">
-                <h1>{{property.Name}}</h1>
-                <h2>{{property.Type}}</h2>
-                <h3>{{property.Price}}</h3>
-            </div>
-        </div>
+<div class="card">
+    <div class="card-img-wrapper">
+        <img class="card-img-top" src="assets/Images/House-default.jpg">
+        <ul class="list-inline text-center member-icons animate">
+            <li class="list-inline-item">
+                <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa fa-edit" aria-hidden="true"></i></button>
+            </li>
+            <li class="list-inline-item">
+                <button class="btn btn-primary"><i class="fa fa-address-book" aria-hidden="true"></i></button>
+            </li>
+        </ul>
+    </div>
+    <div class="card-body p-2">
+        <h1>{{property.Name}}</h1>
+        <h2>{{property.Type}}</h2>
+        <h3>{{property.Price}}</h3>
     </div>
 </div>
