--- a/src/app/Property/propert-card/propert-card.component.html
+++ b/src/app/Property/propert-card/propert-card.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-img-wrapper">
-        <img class="card-img-top" src="assets/Images/House-default.jpg">
+        <img class="card-img-top" src="assets/Images/{{property.Image}}.jpg">
         <ul class="list-inline text-center member-icons animate">
             <li class="list-inline-item">
                 <button class="btn btn-primary" routerLink="/property-detail/{{property.Id}}"><i class="fa fa-edit" aria-hidden="true"></i></button>
