--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,13 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLinkActive="active" routerLink="/">Garana</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" routerLink="/">Buy</a>
+          <a class="nav-link active" aria-current="page" [routerLinkActiveOptions]="{exact:true}"
+            routerLinkActive="active" routerLink="/">Buy</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/rent-property" routerLinkActive="active">Rent</a>
@@ -16,10 +18,26 @@
           <a class="nav-link" routerLink="/add-property" routerLinkActive="active">List Property (Free)</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div>
+        <ul class="nav navbar-nav">
+          <li class="nav-item" *ngIf="!IsLogedIn()">
+            <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+          </li>
+          <li class="nav-item" *ngIf="!IsLogedIn()">
+            <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+          </li>
+
+          <div *ngIf="IsLogedIn()" class="dropdown me-5" dropdown>
+            <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">Welcome {{loggedInUser}}</a>
+            <div class="dropdown-menu" *dropdownMenu="">
+              <a href="#" class="dropdown-item"><i class="fas fa-tachometer-alt"></i> ViewDashboard</a>
+              <a href="#" class="dropdown-item"><i class="fas fa-user-circle"></i>My Profile</a>
+              <a href="#" class="dropdown-item"><i class="fas fa-key"></i>Change Password</a>
+              <a (click)="OnLogout()" class="dropdown-item"><i class="fas fa-sign-out-alt"></i>Logout</a>
+            </div>
+          </div>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
