--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import '../node_modules/alertifyjs/build/css/alertify.min.css';
+@import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+
+.ng-invalid.ng-touched {
+    border-color: red;
+}
+
+.error-block {
+    color: red;
+}
+
+.btn-group>label[ng-reflect-btn-radio] {
+    border-radius: 44px;
+    padding: 0 15px;
+    line-height: 30px;
+}
