adding from related to add propert and property details

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
-
+@import 'assets/tabs.css';
 .ng-invalid.ng-touched {
     border-color: red;
 }
@@ -14,4 +14,13 @@
     border-radius: 44px;
     padding: 0 15px;
     line-height: 30px;
+}
+
+.card-header > h1 , .card-header > h2 , .card-header > h3{
+color: white;
+}
+.card-header{
+    height: 42px;
+    padding: 4px 10px !important;
+    background-color: #007bff;
 }
