--- a/src/app/Property/add-property/add-property.component.html
+++ b/src/app/Property/add-property/add-property.component.html
@@ -1,162 +1,257 @@
-<div class="card">
-  <div class="card-header">
-    List your Property
-  </div>
-  <div class="card-body">
-    <form #Form="ngForm">
-      <div>
-        <div></div>
-        <tabset #formTabs>
-          <tab heading="Basic Info">
-            <div class="form-group col-12">
-              <p>I want to</p>
-              <div class="btn-group" btnRadioGroup>
-                <label class="btn btn-outline-primary me-1" btnRadio="1" role="button" name="SellRent">Sell</label>
-                <label class="btn btn-outline-primary" btnRadio="2" role="button" name="SellRent">Rent</label>
-              </div>
-            </div>
-
-            <div class="form-group col-12">
-              <label>Name</label>
-              <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required minlength="5">
-              <span *ngIf="!propName.valid && propName.touched" class="error-block">
-                <span>Please provide name</span>
-                <span>Name must be atleast 5 char long</span>
-              </span>
-            </div>
-
-            <div class="form-group col-12">
-              <label>Type</label>
-              <input type="text" class="form-control" ngModel name="Type">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Price</label>
-              <input type="text" class="form-control" ngModel name="Price">
-            </div>
-
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(1)">Next</button>
-            </div>
-          </tab>
-
-          <tab heading="Pricing and Area">
-            <div class="form-group col-12">
-              <label>Price (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Security (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Maintenance (in USD)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Built Area (in Sqr Feet)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Carpet Area(in Sqr Feet)</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary btn-block me-1" (click)="selectTab(2)">Next</button>
-
-              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(0)">Back</button>
-            </div>
-          </tab>
-
-          <tab heading="Address">
-
-            <div class="form-group col-12">
-              <label>Floor</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Total Floor</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Address</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Landmark</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary me-1" (click)="selectTab(3)">Next</button>
-
-              <button type="button" class="btn btn-primary" (click)="selectTab(1)">Back</button>
-            </div>
-          </tab>
-
-          <tab heading="Other Details">
-            <div class="form-group col-12">
-              <label>Ready to Move</label><br />
-              <input type="radio" id='Yes' value='1' name="RTM">
-              <label class="m-2">Yes</label>
-
-              <input type="radio" id="No" value='2' name="RTM">
-              <label class="m-2">No</label>
-            </div>
-
-            <div class="form-group col-3">
-              <label>Possession/Avaialble From</label>
-              <input type="date" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Age of Property</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Gated Community</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Main Entrance</label>
-              <input type="text" class="form-control">
-            </div>
-
-            <div class="form-group col-12">
-              <label>Description</label>
-              <textarea type="text" class="form-control" rows="6"></textarea>
-            </div>
-
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary me-1" (click)="selectTab(4)">Next</button>
-
-              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(2)">Back</button>
-            </div>
-          </tab>
-
-          <tab heading="Photos">
-            <div class="form-group col-12">
-              <div class="photo-control">
-                <button class="mt-5" type="button">Upload</button> <br>
-                This is under construction
-              </div>
-            </div>
-            <div class="form-group col-12">
-              <button type="button" class="btn btn-primary btn-block" (click)="selectTab(3)">Back</button>
-            </div>
-          </tab>
-        </tabset>
+<div class="row mt-2">
+  <div class="col-8">
+    <div class="card">
+      <div class="card-header">
+        <h3>List your Property</h3>
       </div>
-    </form>
+      <div class="card-body">
+        <form (ngSubmit)="OnSubmit()" [formGroup]="addPropertForm">
+          <div class="tab-panel">
+            <tabset #formTabs class="member-tabset">
+              <tab heading="Basic Info" formGroupName="BasicInfo">
+
+                <div class="form-group col-12">
+                  <p>I want to</p>
+                  <div class="btn-group" btnRadioGroup formControlName="SellRent" required>
+                    <label class="btn btn-outline-primary me-1" btnRadio="1" role="button" name="SellRent">Sell</label>
+                    <label class="btn btn-outline-primary" btnRadio="2" role="button" name="SellRent">Rent</label>
+                  </div>
+                  <div class="error-block" *ngIf="SellRent.invalid && nextClicked">
+                    Please select Sell or Rent
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>BHK</p>
+                  <div class="btn-group" btnRadioGroup formControlName='BHK' [(ngModel)]="propertyView.BHK">
+                    <label *ngFor="let bhk of[1,2,3,4]" class="btn btn-outline-primary me-1" [btnRadio]="bhk"
+                      role="button" name="BHK">{{bhk}}</label>
+                    <div class="error-block" *ngIf="BHK.invalid && nextClicked">
+                      Please select BHK
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Property Type</p>
+                  <div class="btn-group" btnRadioGroup formControlName="PType" [(ngModel)]="propertyView.PType">
+                    <label *ngFor="let ptype of PropertyTypes" class="btn btn-outline-primary me-1" [btnRadio]="ptype"
+                      role="button" name="PropType">{{ptype}}</label>
+                    <div class="error-block" *ngIf="PType.invalid && nextClicked">
+                      Please select Property Type
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Furnished Type</p>
+                  <div class="btn-group" btnRadioGroup formControlName='FType' [(ngModel)]="propertyView.FType">
+                    <label *ngFor="let ftype of furnishTypes" class="btn btn-outline-primary me-1" [btnRadio]="ftype"
+                      role="button" name="FurnishType">{{ftype}}</label>
+                    <div class="error-block" *ngIf="FType.invalid && nextClicked">
+                      Please select furnishTypes
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>in build/Society/Project</label>
+                  <input type="text" class="form-control" required minlength="5" formControlName="Name"
+                    [(ngModel)]="propertyView.Name">
+                  <div class="error-block" *ngIf="Name.invalid && (nextClicked&& Name.touched)">
+                    Please select building, society or project name
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>City</label>
+                  <select class="form-control" formControlName='City' [(ngModel)]="propertyView.City">
+                    <option value="">--select city--</option>
+                    <option *ngFor="let city of cities" value="{{city.id}}">
+                      {{city.name}}
+                    </option>
+                  </select>
+                  <div class="error-block" *ngIf="City.invalid && (nextClicked&&City.touched)">
+                    Please select City
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(1,BasicInfo.valid)">Next</button>
+                </div>
+              </tab>
+
+              <tab heading="Pricing and Area" formGroupName="PriceInfo">
+                <div class="form-group col-12">
+                  <label *ngIf="SellRent.value==1">Price (in USD)</label>
+                  <label *ngIf="SellRent.value==2">Rent (in USD)</label>
+                  <input type="text" class="form-control" formControlName="Price" [(ngModel)]="propertyView.Price">
+                  <div class="error-block" *ngIf="Price.invalid && (nextClicked || Price.touched)">
+                    Please select
+                    <span *ngIf="SellRent.value==1;else ShowRent">price</span>
+                    <ng-template #ShowRent>rent</ng-template>
+                  </div>
+                </div>
+                <div *ngIf="SellRent.value==2">
+                  <div class="form-group col-12">
+                    <label>Security (in USD)</label>
+                    <input type="text" class="form-control" formControlName="Security">
+                  </div>
+
+                  <div class="form-group col-12">
+                    <label>Maintenance (in USD)</label>
+                    <input type="text" class="form-control" formControlName="Maintenance">
+                  </div>
+                </div>
+                <div class="form-group col-12">
+                  <label>Built Area (in Sqr Feet)</label>
+                  <input type="text" class="form-control" formControlName="BuiltArea"
+                    [(ngModel)]="propertyView.BuiltArea">
+                  <div class="error-block" *ngIf="BuiltArea.invalid && (nextClicked&& BuiltArea.touched)">
+                    Please select build up area
+                  </div>
+
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Carpet Area(in Sqr Feet)</label>
+                  <input type="text" class="form-control" formControlName="CarpetArea">
+                </div>
+
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary btn-block me-1"
+                    (click)="selectTab(2,PriceInfo.valid)">Next</button>
+
+                  <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(0,PriceInfo.valid)">Back</button>
+                </div>
+              </tab>
+
+              <tab heading="Address" formGroupName="AddressInfo">
+
+                <div class="form-group col-12">
+                  <label>Floor</label>
+                  <input type="text" class="form-control" formControlName="FloorNo">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Total Floor</label>
+                  <input type="text" class="form-control" formControlName="TotalFloor">
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Address</label>
+                  <input type="text" class="form-control" formControlName="Address">
+                  <div class="error-block" *ngIf="Address.invalid && (nextClicked || Address.touched)">
+                    Please select address
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Landmark</label>
+                  <input type="text" class="form-control" formControlName="LandMark">
+                </div>
+
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary me-1"
+                    (click)="selectTab(3,AddressInfo.valid)">Next</button>
+
+                  <button type="button" class="btn btn-primary" (click)="selectTab(1,AddressInfo.valid)">Back</button>
+                </div>
+              </tab>
+
+              <tab heading="Other Details" formGroupName="OtherInfo">
+                <div class="form-group col-12">
+                  <p>Ready to Move</p>
+                  <div class="btn-group" btnRadioGroup formControlName="RTM">
+                    <label class="btn btn-outline-primary mr-2" btnRadio=1 tabindex="0" role="button" name="RTM">Yes
+                    </label>
+                    <label class="btn btn-outline-primary" btnRadio=2 tabindex="0" role="button" name="RTM">No
+                    </label>
+                  </div>
+                  <div class="error-block" *ngIf="RTM.invalid && nextClicked">
+                    Please select ready to move
+                  </div>
+                </div>
+
+                <div *ngIf="RTM.value==2">
+                  <div class="form-group col-6">
+                    <label>Possession/Avaialble From</label>
+                    <input type="text" placeholder="date" class="form-control" bsDatepicker
+                      [bsConfig]="{containerClass: 'theme-dark-blue', dateInputFormat: 'DD-MM-YYY'}"
+                      formControlName="PossessionOn">
+                  </div>
+                </div>
+
+                <div *ngIf="RTM.value==2">
+                  <div class="form-group col-3">
+                    <label>Age of Property</label>
+                    <input type="text" class="form-control" formControlName="AOP">
+                  </div>
+                </div>
+                <div class="form-group col-12">
+                  <p>Gated Community</p>
+                  <div class="btn-group" btnRadioGroup formControlName="Gated">
+                    <label class="btn btn-outline-primary mr-2" btnRadio=1 tabindex="0" role="button"
+                      name="Gated">Yes</label>
+                    <label class="btn btn-outline-primary" btnRadio=2 tabindex="0" role="button" name="Gated">No</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <p>Mian Entrance</p>
+                  <div class="btn-group" btnRadioGroup formControlName="MainEntrance">
+                    <label class="btn btn-outline-primary mr-2" btnRadio=1 tabindex="0" role="button"
+                      name="MainEntrance">East</label>
+                    <label class="btn btn-outline-primary" btnRadio=2 tabindex="0" role="button"
+                      name="MainEntrance">West</label>
+                    <label class="btn btn-outline-primary" btnRadio=3 tabindex="0" role="button"
+                      name="MainEntrance">South</label>
+                    <label class="btn btn-outline-primary" btnRadio=4 tabindex="0" role="button"
+                      name="MainEntrance">North</label>
+                  </div>
+                </div>
+
+                <div class="form-group col-12">
+                  <label>Description</label>
+                  <textarea type="text" class="form-control" rows="6" formControlName="Description"></textarea>
+                </div>
+
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary me-1"
+                    (click)="selectTab(4,OtherInfo.valid)">Next</button>
+
+                  <button type="button" class="btn btn-primary btn-block"
+                    (click)="selectTab(2,OtherInfo.valid)">Back</button>
+                </div>
+              </tab>
+
+              <tab heading="Photos">
+                <div class="form-group col-12">
+                  <div class="photo-control">
+                    <button class="mt-5" type="button">Upload</button> <br>
+                    This is under construction
+                  </div>
+                </div>
+                <div class="form-group col-12">
+                  <button type="button" class="btn btn-primary btn-block me-1" (click)="selectTab(3,true)">Back</button>
+                  <button type="submit" class="btn btn-primary me-1">Save</button>
+                  <button type="submit" class="btn btn-primary">Cancel</button>
+                </div>
+              </tab>
+            </tabset>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="card-header">
+      <h3>Your Property Preview</h3>
+    </div>
+    <div class="shadow-lg p-3 bg-white">
+      <app-propert-card [property]="propertyView" [hideIcons]="true"></app-propert-card>
+    </div>
   </div>
 </div>
