--- a/src/app/Property/propert-card/propert-card.component.css
+++ b/src/app/Property/propert-card/propert-card.component.css
@@ -12,7 +12,19 @@
     transition-timing-function: ease-out;
     height: 250px;
 }
+.card{
+    min-height: 400px;
+}
 
+.card-body h1{
+font-family: fantasy;
+color: #0069d9;
+}
+
+.font-highlight{
+   font-style: italic;
+   color: red; 
+}
 .card-img-wrapper{
     overflow: hidden;
     position: relative;
